On Solaris, define CMSG_ALIGN, CMSG_LEN, CMSG_SPACE if undefined

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=40235
Tested-by: Dagobert Michelsen <dam@opencsw.org>
Reviewed-by: Will Thompson <will.thompson@collabora.co.uk>